apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
spec:
  ports:
  - port: 8096
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: default
subsets:
- addresses:
  - ip: "100.80.225.20"
  ports:
  - port: 8096
