apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - jellyfin.psquid.net
    secretName: psquid-net-tls
  rules:
  - host: jellyfin.psquid.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
